# cplib

./: .codedocs  .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  prepare.py
.github/workflows/: test.yml
cmake/: clang-format.cmake  coverage.cmake  doxygen.cmake  options.cmake
helper/: buildexample.sh
src/: CMakeLists.txt  cplib.h  empty.cpp  timer.hpp
src/base/: builtin.c  builtin.h
src/math/: basic.cpp  basic.h  basic.hpp  math.h
tests/: CMakeLists.txt
tests/unit_test/base/: builtin_test.cpp
tests/unit_test/math/: basic_test.cpp
